test/number/leading_dot.lox
// error: expect expression
.123
